[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 115.0
margin_top = 145.0
margin_right = 296.0
margin_bottom = 184.0
text = "Bot達o 1"

[node name="Button2" type="Button" parent="."]
margin_left = 409.0
margin_top = 147.0
margin_right = 590.0
margin_bottom = 186.0
text = "Bot達o 2"

[node name="Button3" type="Button" parent="."]
margin_left = 707.0
margin_top = 147.0
margin_right = 888.0
margin_bottom = 186.0
text = "Bot達o 3"

[node name="resultado" type="Label" parent="."]
margin_left = 116.0
margin_top = 53.0
margin_right = 283.0
margin_bottom = 100.0

[node name="nome_aleatorio" type="Label" parent="."]
margin_left = 417.0
margin_top = 56.0
margin_right = 584.0
margin_bottom = 103.0
text = "numero"

[node name="nome_mais_baldo" type="Label" parent="."]
margin_left = 710.0
margin_top = 56.0
margin_right = 950.0
margin_bottom = 103.0
text = "se par, Roberto, sen達o, Roberto baldo"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 381.0
margin_top = 261.0
margin_right = 610.0
margin_bottom = 337.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
